Add TSP project
Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/config.yaml
+++ b/config.yaml
@@ -60,6 +60,12 @@ teams:
 - name: sd-jwt-rust-maintainers
   maintainers:
   - jovfer
+- name: tsp-maintainers
+  maintainers:
+  - wenjing
+  members:
+  - tweedegolf-marc
+  - marlonbaeten
 - name: vc-api-developers
   maintainers:
   - jrhender
@@ -118,6 +124,10 @@ repositories:
 - name: sd-jwt-rust
   teams:
     sd-jwt-rust-maintainers: maintain
+  visibility: public
+- name: tsp
+  teams:
+    tsp-maintainers: maintain
   visibility: public
 - name: vc-api
   teams:
