temporary fix to speed up repo creation
Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/config.yaml
+++ b/config.yaml
@@ -62,8 +62,9 @@ teams:
   - jovfer
 - name: tsp-maintainers
   maintainers:
-  - wenjing
+  - tkuhrt
   members:
+  - wenjing
   - tweedegolf-marc
   - marlonbaeten
 - name: vc-api-developers
