Add MDL JavaScript (#11)
* Add MDL JavaScript

Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

* Fix typo

Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

---------

Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/config.yaml
+++ b/config.yaml
@@ -28,6 +28,11 @@ teams:
   - sethmoo
   - sorotokin
   - suzannajiwani
+- name: mdl-js-maintainers
+  maintainers:
+  - lukasjhan
+  members:
+  - hismethod
 - name: multiformat-vc-ios-maintainers
   maintainers:
   - gauravping
@@ -107,6 +112,9 @@ repositories:
     identity-credential-admins: admin
     identity-credential-maintainers: maintain
   visibility: public
+- name: mdl-js
+  teams:
+    mdl-js-maintainers: maintain
 - name: multiformat-vc-ios
   teams:
     multiformat-vc-ios-maintainers: write
