config.yaml: add credhub-admin
Adding a new group for the credhub repo to manage the settings

Signed-off-by: Mirko Mollik <mirkomollik@gmail.com>

--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,9 @@ teams:
   - cre8
   members:
   - mustafasalfiti
+- name: credhub-admin
+  maintainers:
+  - cre8
 - name: eudi-wallet-kit-react-native-maintainers
   maintainers:
   - AlexanderShenshin
@@ -98,6 +101,7 @@ repositories:
 - name: credhub
   teams:
     credhub-maintainers: maintain
+    credhub-admin: admin
   visibility: public
 - name: eudi-wallet-kit-react-native
   teams:
