--- a/config.yaml
+++ b/config.yaml
@@ -31,6 +31,9 @@ teams:
   - sethmoo
   - sorotokin
   - suzannajiwani
+  - kdeus
+  - hzawawy
+  - TheCoryBarker
 - name: lf-employees
   maintainers:
   - ryjones
