--- a/config.yaml
+++ b/config.yaml
@@ -77,7 +77,9 @@ teams:
   - peppelinux
 - name: sd-jwt-rust-maintainers
   maintainers:
-  - jovfer
+  - tkuhrt
+  members:
+  - Abdulbois
 - name: tsp-maintainers
   maintainers:
   - wenjing
@@ -105,6 +107,8 @@ teams:
   - Dindexx
   - JoTiTu
   - ntsbs
+  members:
+  - kenkosmowski
 repositories:
 - name: .github
   visibility: public
