fix sd-jwt-rust-maintainers (#20)
* fix sd-jwt-rust-maintainers

Signed-off-by: Sergey Minaev <sergey.minaev.dev@gmail.com>

* Update config.yaml

Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

---------

Signed-off-by: Sergey Minaev <sergey.minaev.dev@gmail.com>
Signed-off-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>
Co-authored-by: Tracy Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/config.yaml
+++ b/config.yaml
@@ -77,7 +77,7 @@ teams:
   - peppelinux
 - name: sd-jwt-rust-maintainers
   maintainers:
-  - tkuhrt
+  - jovfer
   members:
   - Abdulbois
 - name: tsp-maintainers
