--- a/config.yaml
+++ b/config.yaml
@@ -62,6 +62,8 @@ teams:
   - kayaelle
   - dmitrizagidulin
   - jchartrand
+  - santhoshvijay11
+  - swaroopinamdar
 - name: lf-employees
   maintainers:
   - ryjones
