add Nitin, Shikar and Sachin as vc-api devs
Signed-off-by: jrhender <john.henderson@energyweb.org>

--- a/config.yaml
+++ b/config.yaml
@@ -138,6 +138,9 @@ teams:
   - jrhender
   members:
   - nichonien
+  - ni3gavhane
+  - mesaresachin
+  - ShikharBhatt
 - name: vc-api-maintainers
   maintainers:
   - jrhender
