Add new developers Maximilian Pohl and Michiel Philipse
Signed-off-by: Wenjing Chu <wchu@futurewei.com>
Signed-off-by: Ry Jones <ry@linux.com>

--- a/config.yaml
+++ b/config.yaml
@@ -127,6 +127,8 @@ teams:
   members:
   - tweedegolf-marc
   - marlonbaeten
+  - pohlm01
+  - michielp1807
 - name: tuvali-maintainers
   maintainers:
   - swatigoel
