--- a/config.yaml
+++ b/config.yaml
@@ -88,7 +88,7 @@ teams:
   maintainers:
   - lukasjhan
   members:
-  - pensivej
+  - aceshim
 - name: multiformat-vc-ios-maintainers
   maintainers:
   - gauravping
