--- a/config.yaml
+++ b/config.yaml
@@ -66,6 +66,10 @@ teams:
   - kdeus
   - hzawawy
   - TheCoryBarker
+  - hanluOMH
+  - itsme291
+  - VishnuSanal
+  - dzuluaga
 - name: lcw-maintainers
   maintainers:
   - alexfigtree
